# narlogs

./: Makefile  README.md  pyproject.toml
docs/assets/: any-language-editor-DC6tr8K3.js  architectureDiagram-IFBEXTG3-C4KGz7X6.js  c4Diagram-ZCSEYPFN-BR1TFS15.js  compile-Cenw5ENu.js  data-editor-DW6Q5vam.js  edit-page-C4EkroLZ.js  flowDiagram-NWEUNK3L-Bs5wnewb.js  gitGraph-YCYPL57B-CKQO5_4r.js  index-BxSh2dSa.js  index-CqPQBOGX.js  index-D2VeYVNV.css  index-D9QtgmY7.js  index-DwomBIXu.js  mermaid-ClBCjUJW.js  mindmap-definition-OEB2RXX2-CjRPBBgI.js  sequenceDiagram-WK7YDQ3N-2lLVDL8e.js  slides-component-mW8ihitn.js  terminal-XhjlbiNc.js  tree-Ch3oKrmV.js
narlogs/: __init__.py
tests/: test_basics.py
