[project]
name = "narlogs"
version = "0.1.0"
description = "Utilities to log on dataframe pipelines"
authors = []
dependencies = [
    "narwhals",
    "humanize",
    "orjson"
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
